gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/imp18979.d
version https://git-lfs.github.com/spec/v1
oid sha256:3fefd5d65af85f0dacbb01814264bff2b7f010515f3c59ddcc5d9ba658bbde1e
size 69
